--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.10",
     "lucide-react": "^0.454.0",
-    "next": "15.0.2",
+    "next": "^15.5.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-ai-orb": "^1.0.13",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
