--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@flags-sdk/vercel": "^1.0.1",
+    "@hookflo/tern": "^2.2.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@vercel/flags-core": "^1.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "flags": "^4.0.3",
     "framer-motion": "^11.11.10",
     "lucide-react": "^0.454.0",
     "next": "^15.5.2",
